# ragent

./: .gitignore  .gitmodules  Cargo.toml  README.md  splash.psd
.cargo/: config.toml
src/: lib.rs
src/ragent/: Cargo.toml
src/ragent/src/: lib.rs  tasks.rs
src/ragent/src/agent/: base_agent.rs  chatgpt_agent.rs  mod.rs  user_agent.rs
src/ragent/src/tools/chat_completion/: llama.rs
src/ragent/src/tools/voice_synthesis/: mod.rs
src/ragent/src/tools/voice_transcription/: mod.rs
src/ragent_core/: Cargo.toml
src/ragent_image_generators/: Cargo.toml
src/ragent_image_generators/src/: lib.rs
src/ragent_synthesizers/: Cargo.toml
src/ragent_synthesizers/src/: lib.rs  openai_tts.rs  play_ht.rs
src/ragent_transcribers/: Cargo.toml
