[workspace]
resolver = "2"

members = [
    "packages/deps/ragent_core",
    "packages/deps/ragent_derive",
    "packages/deps/ragent_image_generators",
    "packages/deps/ragent_synthesizers",
    "packages/deps/ragent_transcribers"
]

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch."https://github.com/empathic-ai/ragent_core.git"]
ragent_core = { path = "./packages/deps/ragent_core" }

[patch."https://github.com/empathic-ai/ragent_derive.git"]
ragent_derive = { path = "./packages/deps/ragent_derive" }