[workspace]
resolver = "2"

members = [
    "src/ragent",
    "src/ragent_core",
    "src/ragent_derive",
    "src/ragent_image_generators",
    "src/ragent_synthesizers",
    "src/ragent_transcribers"
]

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"