[workspace]
resolver = "2"

members = [
    "src/ragent_core",
    "src/ragent_derive",
    "src/ragent"
]

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch."https://github.com/empathic-ai/ragent-derive.git"]
ragent_derive = { path = "./src/ragent_derive" }

[patch."https://github.com/empathic-ai/ragent-base.git"]
ragent = { path = "./src/ragent" }

[patch."https://github.com/empathic-ai/ragent.git"]
ragent_core = { path = "./src/ragent_core" }