[package]
name = "ragent_transcribers"
version = "0.5.1"
authors = []
edition = "2021"
readme = "README.md"
resolver = "2"
description = ""
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { git = "https://github.com/empathic-ai/common.git" }
base64 = "0.21.5"
bytes = "1.5.0"
cpal = "0.15.2"
crossbeam = "0.8.2"
futures = "0.3.29"
tokio = { version = "1.32.0", default-features = false, features = ["macros", "rt", "sync"] }
async-channel = "1.8.0"
anyhow = "1.0.71"
async-trait = "0.1.75"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.10.2", default-features = false, features = ["prost", "codegen"] }
reqwest = { version = "0.11.13", features = ["json", "stream"] }

[target.'cfg(all(not(target_arch = "wasm32")))'.dependencies]
deepgram = { git = "https://github.com/empathic-ai/deepgram-rust-sdk.git" }
